fix spacing on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,13 +47,10 @@ section {
     color: white;
     background: #d24d57;
     border-radius: 2rem;
-    margin-top: -6em;
-    margin-right: 8em;
-    margin-left: -8em;
+    margin-top: -4em;
     filter: drop-shadow(10px 10px 0px #000);
     border: 2px solid #000;
     margin-bottom: 4rem;
-    margin-right: 2rem;
 }
 
 .p-page {
